@@ -211,7 +211,7 @@ start_again:;
 			if ( LDAP_IS_UDP(ld) ) {
 				struct sockaddr sa = {0};
 				/* dummy, filled with ldo_peer in request.c */
-				err = ber_write( ber, &sa, sizeof(sa), 0 );
+				err = ber_write( ber, (char *) &sa, sizeof(sa), 0 );
 			}
 			if ( LDAP_IS_UDP(ld) && ld->ld_options.ldo_version ==
 				LDAP_VERSION2 )
