@@ -302,7 +302,7 @@ ldap_build_search_req(
 	if ( LDAP_IS_UDP(ld) ) {
 		struct sockaddr sa = {0};
 		/* dummy, filled with ldo_peer in request.c */
-	    err = ber_write( ber, &sa, sizeof( sa ), 0 );
+	    err = ber_write( ber, (char *) &sa, sizeof( sa ), 0 );
 	}
 	if ( LDAP_IS_UDP(ld) && ld->ld_options.ldo_version == LDAP_VERSION2) {
 	    char *dn = ld->ld_options.ldo_cldapdn;
